# ai-vault-dashboard

./: .eslintrc.json  .gitignore  README.md  main.py  mkdocs.yml  next.config.mjs  package-lock.json  package.json  requirements-docs.txt  tailwind.config.ts  tsconfig.json
backend/: README.md  main.py  pyproject.toml  requirements.txt  vault-backend.spec
backend/routers/: export.py  geometry.py  geometry2d.py  project.py  projection.py  segmentation.py  upload.py
backend/services/: app_paths.py  e57_exporter.py  e57_processor.py  geometry_analyzer.py  intrados_detector.py  intrados_export.py  intrados_tracer.py  measurement_service.py  progress_manager.py  projection.py  projection_gaussian_utils.py  reprojection.py  rhino_exporter.py  sam_service.py
backend/services/geometry2d/: __init__.py  bay_plan_candidate_service.py  (+10 more)
backend/tests/: test_bay_candidate_io_partial_snap.py  test_bay_plan_manual_edge_flags.py  test_corner_anchors_refresh.py  test_cut_typology_derivation.py  test_cut_typology_match_state.py  test_cut_typology_pipeline_equivalence.py  test_geometry2d_bay_plan_measured_precedence.py  test_geometry2d_bay_plan_used_boss_match_enrichment.py  test_geometry2d_cut_typology_axis_matching.py  test_geometry2d_scale.py  test_measurement_service_arc_distance.py  test_prepare_bosses_no_segmentation.py  test_resolve_e57_path.py  test_segment_overlap_directional_weight.py
backend/vault_geometry2d/: __init__.py  run_pipeline.py  step01_roi.py  step02_prepare_boss.py  step03_roi_correction.py  step04_boss_cut_matching.py  step05_overlay.py  step06_delaunay_ribs.py
(+184 files in other folders)
