[project]
name = "backend"
version = "0.1.0"
description = "Vault Analyser backend service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "fastapi==0.115.0",
    "numpy==1.26.4",
    "open3d==0.19.0",
    "opencv-python-headless==4.10.0.84",
    "pandas==2.2.3",
    "pillow==10.4.0",
    "pydantic==2.9.2",
    "pye57>=0.4.19",
    "python-multipart==0.0.9",
    "safetensors>=0.7.0",
    "scikit-image==0.24.0",
    "scipy==1.14.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers",
    "triangle>=20250106",
    "uvicorn[standard]==0.30.6",
    "websockets==12.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller==6.10.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
